# trapiche

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  hrc  pyproject.toml  settings.ini  setup.py
.github/workflows/: pre-commit-autofix.yml
test/: __init__.py  test_integration_api_cli.py  test_trapiche_text.yml
test/files/: input_file.tsv  test_text.json
test/files/input_file.tsv_TRAPICHE_RESULTS/: input_file.tsv_TRAPICHE_RESULTS.minimal_results.tsv  input_file.tsv_TRAPICHE_RESULTS.results.tsv
test/files/text_files/: PRJEB42572_project_description.txt
test/input_file.tsv_TRAPICHE_RESULTS/: input_file.tsv_TRAPICHE_RESULTS.minimal_results.tsv  input_file.tsv_TRAPICHE_RESULTS.results.tsv
test/taxonomy_files/: ERR2231570_MERGED_FASTQ_LSU_OTU.tsv  ERR2231570_MERGED_FASTQ_SSU_OTU.tsv  ERR5954428_MERGED_FASTQ_LSU_OTU.tsv  ERR5954428_MERGED_FASTQ_SSU_OTU.tsv  SRR1524511_MERGED_FASTQ_LSU_OTU.tsv  SRR1524511_MERGED_FASTQ_SSU_OTU.tsv
trapiche/: __init__.py  _modidx.py  _version.py  api.py  baseData.py  benchmark.py  biome2vec.py  cli.py  community2vec.py  config.py  deep_pred.py  download_cli.py  fuzzy_knn.py  goldOntologyAmendments.py  knn_cosine.py  knn_jaccard.py  llm_layer.py  logging_config.py  mgnify_analysis.py  model_registry.py  taxonomyTree.py  taxonomy_prediction.py  taxonomy_vectorization.py  text_prediction.py  trapiche_text.py  utils.py  workflow.py
trapiche/data/biome2vec/: model_vocab.json
trapiche/data/deep_pred/: tags_dct_file.json
trapiche/data/goldOntologyAmendments/: biome_graph.graphml  biome_herarchy_df.tsv  biome_original_graph.graphml
trapiche/helpers/: __init__.py  config.py  llm_text_pred.py
trapiche/helpers/prompts/: gold_ecosystem_tree.json  text_prediction_prompt.md
