[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trapiche"
version = "0.0.4"
description = "Trapiche biome prediction toolkit"
readme = "README.md"
authors = [{name="Trapiche Developers"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "numpy",
  "tqdm",
  "requests",
  "networkx",
  "fastcore",
  "gensim",
  "transformers",
  "spacy",
  "scispacy",
  "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_sm-0.5.4.tar.gz",
]


[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","SIM","C4"]
ignore = ["E203","E501"]

[tool.ruff.isort]
combine-as-imports = true
force-single-line = false

