
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trapiche"
dynamic = ["version"]
description = "Trapiche biome prediction toolkit"
readme = "README.md"
authors = [{name = "Santiago Sanchez Fragoso", email = "fragoso@ebi.ac.uk"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers",
  "safetensors",
  "huggingface_hub",
  "tensorflow",
  "scispacy",
  "nltk",
  "numpy",
  "pandas",
  "tables",
  "requests",
  "tqdm",
  "networkx",
  "gensim",
  "more-itertools",
  "spacy",
  # Optional SciSpacy model (kept as convenience; installing may also require `scispacy` package)
  # Use a PEP 508 direct reference: <name> @ <url>
  "en_core_sci_sm @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_sm-0.5.4.tar.gz",
]

urls = { Homepage = "https://github.com/Finn-Lab/trapiche" }

[tool.setuptools_scm]
write_to = "trapiche/_version.py"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","SIM","C4"]
ignore = ["E203","E501"]

[tool.ruff.isort]
combine-as-imports = true
force-single-line = false

