[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trapiche"
dynamic = ["version"]
description = "Trapiche biome prediction toolkit"
readme = "README.md"
authors = [{name = "Santiago Sanchez Fragoso", email = "fragoso@ebi.ac.uk"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "tables",
  "requests",
  "tqdm",
  "pydantic>=2.5",
  "pydantic-settings>=2.3",
  "torch==2.8.0",
  "transformers==4.55.4",
  "huggingface_hub==0.34.4",
  "safetensors==0.6.2",
  "nltk==3.9.1",
  "networkx==3.4.2",
  "gensim==4.3.3",
  "more-itertools==10.7.0",
  "spacy==3.7.5",
  "scispacy==0.5.5",
  "en_core_sci_sm @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_sm-0.5.4.tar.gz",
]

urls = { Homepage = "https://github.com/Finn-Lab/trapiche" }

[project.scripts]
trapiche = "trapiche.cli:main"

[tool.setuptools_scm]
write_to = "trapiche/_version.py"

[tool.setuptools.packages.find]
include = ["trapiche*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","SIM","C4"]
ignore = ["E203","E501"]

[tool.ruff.isort]
combine-as-imports = true
force-single-line = false

[project.optional-dependencies]
# TensorFlow is optional because some users prefer the CPU-only wheel (tensorflow-cpu)
# Install with one of the extras below, e.g. `pip install .[cpu]` or `pip install .[gpu]`.
cpu = ["tensorflow-cpu==2.20.0"]
gpu = ["tensorflow==2.20.0"]